feat: emitter and receipt crud with pdf generation
